[package]
name = "asm-lsp"
version = "0.1.0"
authors = ["Clinery1 <clinery8237@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#jsonrpc-core = "13.2.0"
#tower-lsp="0.4.0"
#tokio="0.1.22"
#futures="*"
serde_json="1.0.41"
lazy_static="1.4.0"
crossbeam-channel="0.3.5"
gen_lsp_server="0.2.0"
failure="0.1.4"
lsp-types="0.57.0"
tempfile="3.1.0"
