[package]
name = "nasm-lsp"
version = "0.1.0"
authors = ["Clinery1 <clinery8237@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json="1.0.48"
crossbeam-channel="0.3.9"
gen_lsp_server="*"
failure="0.1.7"
lsp-types="0.57.2"
tempfile="*"
